; ModuleID = '/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_attr.c_nla_ok.c'
source_filename = "/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_attr.c_nla_ok.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nlattr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nla_ok(%struct.nlattr* %0, i32 %1) #0 {
  %3 = alloca %struct.nlattr*, align 8
  %4 = alloca i32, align 4
  store %struct.nlattr* %0, %struct.nlattr** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = sext i32 %5 to i64
  %7 = icmp uge i64 %6, 4
  br i1 %7, label %8, label %20

8:                                                ; preds = %2
  %9 = load %struct.nlattr*, %struct.nlattr** %3, align 8
  %10 = getelementptr inbounds %struct.nlattr, %struct.nlattr* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sext i32 %11 to i64
  %13 = icmp uge i64 %12, 4
  br i1 %13, label %14, label %20

14:                                               ; preds = %8
  %15 = load %struct.nlattr*, %struct.nlattr** %3, align 8
  %16 = getelementptr inbounds %struct.nlattr, %struct.nlattr* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp sle i32 %17, %18
  br label %20

20:                                               ; preds = %14, %8, %2
  %21 = phi i1 [ false, %8 ], [ false, %2 ], [ %19, %14 ]
  %22 = zext i1 %21 to i32
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
